# url-shortener-backend

./: .env.dev  .env.example  .env.prod  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tests.sh
alembic/: apply_migrations.sh  env.py
alembic/versions/: 17cb66d93d8a_created_users_and_urls_tables.py  9e2f204b9368_full_name_not_unique.py  d5ebcc8bff4f_add_created_at_field_to_urls.py
src/: __init__.py  config.py  dependencies.py  models.py  redis.py  utils.py
src/routers/: auth.py  url.py  user.py
src/schemas/: urls.py  user.py
src/services/: url.py  user.py
tests/: conftest.py
tests/auth/: test_auth.py
tests/urls/: schemas.py  test_create_url.py  test_delete_url.py  test_read_url.py  test_update_url.py
tests/users/: schemas.py  test_create_user.py  test_delete_user.py  test_read_user.py
